--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "## Bike Sharing Demand Prediction\n",
     "\n",
-    "We used the dataset from [Kaggle](https://www.kaggle.com/c/bike-sharing-demand/overview) to develop a machine learning model to predict a bike sharing demand."
+    "We used the dataset from [Kaggle](https://www.kaggle.com/c/bike-sharing-demand/overview) to develop a machine learning model to predict a bike sharing demand. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,17 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
-    "sns.set_style('darkgrid')\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error"
+    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error\n",
+    "\n",
+    "sns.set_style('darkgrid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +406,7 @@
        "max      977.000000     23.000000     12.000000  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +561,7 @@
        "4        56    11.0014  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +585,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +746,7 @@
        "max      50.000000   100.000000    55.998600  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +767,7 @@
        "(6493, 9)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,11 +887,11 @@
     "    # Compute Error\n",
     "    msle = mean_squared_log_error(count_pred, y)\n",
     "    rmsle = np.sqrt(msle)\n",
-    "    print('RMLSE for the wr:', rmsle) \n",
+    "    print('RMLSE:', rmsle) \n",
     "    \n",
     "    mae = mean_absolute_error(count_pred, y)\n",
     "    rmae = np.sqrt(mae)\n",
-    "    print('RMAE for the wr:', rmae) \n",
+    "    print('RMAE:', rmae) \n",
     "    \n",
     "    # Plotting important features\n",
     "    importances = RF.feature_importances_\n",
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 188,
    "metadata": {
     "scrolled": true
    },
@@ -1117,7 +1118,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1140,7 @@
        "(10886, 21)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,15 +1152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMLSE for the wr: 0.3917830842592559\n",
-      "RMAE for the wr: 6.760605930215257\n"
+      "RMLSE: 0.3917830842592559\n",
+      "RMAE: 6.760605930215257\n"
      ]
     },
     {
@@ -1187,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 191,
    "metadata": {
     "scrolled": true
    },
@@ -1366,7 +1367,7 @@
        "4          0             0             1  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1389,7 @@
        "(6493, 18)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1421,7 @@
        "        98.53955649,  61.79182167])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1508,7 @@
        "4  2011-01-20 04:00:00      0"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1596,7 @@
        "4  2011-01-20 04:00:00   2.626996"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
