--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4        75        0.0       0           1      1  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -237,8 +237,6 @@
        "      <th>casual</th>\n",
        "      <th>registered</th>\n",
        "      <th>count</th>\n",
-       "      <th>time</th>\n",
-       "      <th>month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -249,8 +247,6 @@
        "      <td>10886.000000</td>\n",
        "      <td>10886.000000</td>\n",
        "      <td>10886.00000</td>\n",
-       "      <td>10886.000000</td>\n",
-       "      <td>10886.000000</td>\n",
        "      <td>10886.000000</td>\n",
        "      <td>10886.000000</td>\n",
        "      <td>10886.000000</td>\n",
@@ -271,8 +267,6 @@
        "      <td>36.021955</td>\n",
        "      <td>155.552177</td>\n",
        "      <td>191.574132</td>\n",
-       "      <td>11.541613</td>\n",
-       "      <td>6.521495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -287,8 +281,6 @@
        "      <td>49.960477</td>\n",
        "      <td>151.039033</td>\n",
        "      <td>181.144454</td>\n",
-       "      <td>6.915838</td>\n",
-       "      <td>3.444373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -301,8 +293,6 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -319,8 +309,6 @@
        "      <td>4.000000</td>\n",
        "      <td>36.000000</td>\n",
        "      <td>42.000000</td>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -335,8 +323,6 @@
        "      <td>17.000000</td>\n",
        "      <td>118.000000</td>\n",
        "      <td>145.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>7.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -351,8 +337,6 @@
        "      <td>49.000000</td>\n",
        "      <td>222.000000</td>\n",
        "      <td>284.000000</td>\n",
-       "      <td>18.000000</td>\n",
-       "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -367,8 +351,6 @@
        "      <td>367.000000</td>\n",
        "      <td>886.000000</td>\n",
        "      <td>977.000000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>12.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -395,30 +377,30 @@
        "75%       31.060000     77.000000     16.997900     49.000000    222.000000   \n",
        "max       45.455000    100.000000     56.996900    367.000000    886.000000   \n",
        "\n",
-       "              count          time         month  \n",
-       "count  10886.000000  10886.000000  10886.000000  \n",
-       "mean     191.574132     11.541613      6.521495  \n",
-       "std      181.144454      6.915838      3.444373  \n",
-       "min        1.000000      0.000000      1.000000  \n",
-       "25%       42.000000      6.000000      4.000000  \n",
-       "50%      145.000000     12.000000      7.000000  \n",
-       "75%      284.000000     18.000000     10.000000  \n",
-       "max      977.000000     23.000000     12.000000  "
+       "              count  \n",
+       "count  10886.000000  \n",
+       "mean     191.574132  \n",
+       "std      181.144454  \n",
+       "min        1.000000  \n",
+       "25%       42.000000  \n",
+       "50%      145.000000  \n",
+       "75%      284.000000  \n",
+       "max      977.000000  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Description\n",
-    "train1.describe()"
+    "train.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +543,7 @@
        "4        56    11.0014  "
       ]
      },
-     "execution_count": 182,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +567,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +728,7 @@
        "max      50.000000   100.000000    55.998600  "
       ]
      },
-     "execution_count": 184,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +749,7 @@
        "(6493, 9)"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 210,
    "metadata": {
     "scrolled": true
    },
@@ -1118,7 +1100,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1122,7 @@
        "(10886, 21)"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 213,
    "metadata": {
     "scrolled": true
    },
@@ -1367,7 +1349,7 @@
        "4          0             0             1  "
       ]
      },
-     "execution_count": 191,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1371,7 @@
        "(6493, 18)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1403,7 @@
        "        98.53955649,  61.79182167])"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1490,7 @@
        "4  2011-01-20 04:00:00      0"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1578,7 @@
        "4  2011-01-20 04:00:00   2.626996"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
