--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "## Bike Sharing Demand Prediction\n",
     "\n",
-    "We used the dataset from [Kaggle](https://www.kaggle.com/c/bike-sharing-demand/overview) to develop a machine learning model to predict a bike sharing demand. "
+    "We used the dataset from [Kaggle](https://www.kaggle.com/c/bike-sharing-demand/overview) to develop a machine learning model to predict a bike sharing demand. \n",
+    "\n",
+    "Note that there are two types of data:\n",
+    "1. Categorical: Nominal or ordinal. To use this type of data, we need to encode it (e.g. one-hot encoding) for developing machine learning models.\n",
+    "2. Quantitative: discrete or continuous."
    ]
   },
   {
