--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "# Description\n",
+    "# Description i.e. summary statistics.\n",
     "train.describe()"
    ]
   },
@@ -739,7 +739,7 @@
     }
    ],
    "source": [
-    "# Description\n",
+    "# Description i.e. summary statistics.\n",
     "test.describe()"
    ]
   },
@@ -813,6 +813,9 @@
     "    # Median imputation if any\n",
     "    for i in df.columns:\n",
     "        df[i].fillna(value = df[i].median(), inplace=True) # Fill NA/NaN values using the specified method, here using median().\n",
+    "    \n",
+    "    # Remove duplicated samples\n",
+    "    # df = df[df.duplicated() == False]  \n",
     "    \n",
     "    return df"
    ]
@@ -1163,19 +1166,21 @@
    ],
    "source": [
     "# Compute Errors\n",
-    "mse = mean_squared_error(count_pred_train, y)\n",
+    "mse = mean_squared_error(count_pred_train, y) # The lower the better.\n",
     "rmse = np.sqrt(mse)\n",
     "print('MSE:', rmse)\n",
     "\n",
-    "msle = mean_squared_log_error(count_pred_train, y)\n",
+    "msle = mean_squared_log_error(count_pred_train, y) # The lower the better.\n",
     "rmsle = np.sqrt(msle)\n",
     "print('RMLSE:', rmsle) \n",
     "\n",
-    "mae = mean_absolute_error(count_pred_train, y)\n",
+    "mae = mean_absolute_error(count_pred_train, y) # The lower the better.\n",
     "rmae = np.sqrt(mae)\n",
     "print('RMAE:', rmae) \n",
     "\n",
-    "r2 = r2_score(count_pred_train, y)\n",
+    "r2 = r2_score(count_pred_train, y) # r2_score, pronounced 'R-squared', computes the coefficient of determination, \n",
+    "                                   # which is the proportion of the variation in the dependent variable that is \n",
+    "                                   # predictable from the independent variable(s). The higher the better.\n",
     "rr2 = np.sqrt(r2)\n",
     "print('RR2:', rr2)"
    ]
