--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -418,8 +418,9 @@
    ],
    "source": [
     "# The given train dataset has 10886 rows and 12 columns. Season, holiday, workingday and weather columns are \n",
-    "# categorical. Rest all, except ‘datetime’ are numerical columns. We engineer two more features,‘hour’ and ‘month’, \n",
-    "# using ‘datetime’ column. And then drop unnecessary column(s) (See 'pre_processing' function below for more detail).\n",
+    "# categorical. Rest all, except ‘datetime’ are numerical columns. We engineer two more features,‘hour’ and \n",
+    "# ‘month’, using ‘datetime’ column. And then drop unnecessary column(s) (See 'pre_processing' function below \n",
+    "#for more detail).\n",
     "print(train.shape)"
    ]
   },
@@ -805,14 +806,16 @@
     "\n",
     "\n",
     "    # One hot encoding on categorical columns. pd.get_dummies converts categorical variable into dummy/indicator \n",
-    "    # variables. More details about one-hot encoding is given in [3]. # drop_first=True for Dummy Variable Encoding.\n",
+    "    # variables. More details about one-hot encoding is given in [3]. # drop_first=True for Dummy Variable \n",
+    "    # Encoding.\n",
     "    # df = pd.get_dummies(df, columns=['season','weather'], drop_first=True)  \n",
     "    df = pd.get_dummies(df, columns=['season','weather', 'holiday', 'workingday'])\n",
     "\n",
     "\n",
     "    # Median imputation if any\n",
     "    for i in df.columns:\n",
-    "        df[i].fillna(value = df[i].median(), inplace=True) # Fill NA/NaN values using the specified method, here using median().\n",
+    "        df[i].fillna(value = df[i].median(), inplace=True) # Fill NA/NaN values using the specified method, here \n",
+    "                                                           # using median().\n",
     "    \n",
     "    # Remove duplicated samples\n",
     "    # df = df[df.duplicated() == False]  \n",
@@ -850,7 +853,7 @@
     "                 'max_depth':np.arange(1,11,2),\n",
     "                 'min_samples_leaf':np.arange(2,15,3)}\n",
     "   \n",
-    "    gs_rf = GridSearchCV(rf, rf_params,cv=3)\n",
+    "    gs_rf = GridSearchCV(rf, rf_params, cv=3)\n",
     "    gs_rf.fit(x_train, y_train)\n",
     "    \n",
     "    best_params = gs_rf.best_params_\n",
@@ -1110,7 +1113,8 @@
     }
    ],
    "source": [
-    "# After pre-processing, the training dataset has 21 columns, however, 3 columns will be dropped in the model() \n",
+    "# After pre-processing, the training dataset has 21 columns, however, 3 columns will be dropped in the \n",
+    "# train_model() function. \n",
     "train_p.shape"
    ]
   },
