--- a/BikeSharingDemandPrediction.ipynb
+++ b/BikeSharingDemandPrediction.ipynb
@@ -787,6 +787,10 @@
    "source": [
     "def pre_processing(df):\n",
     "    \n",
+    "    \"\"\"\n",
+    "    df is input Pandas DataFrame. DataFrame is a 2-dimensional data structure, like a 2-dimensional array, or \n",
+    "    a table with rows and columns.\n",
+    "    \"\"\"\n",
     "        \n",
     "    # Pre-processing train data\n",
     "    #  Adding hour and month to the dataframe using datatime column\n",
@@ -837,6 +841,11 @@
    "outputs": [],
    "source": [
     "def train_model(df):\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    df is input Pandas DataFrame. DataFrame is a 2-dimensional data structure, like a 2-dimensional array, or \n",
+    "    a table with rows and columns.\n",
+    "    \"\"\"\n",
     "    \n",
     "    # Adjust samples and labels to predict count\n",
     "    y = df['count']  # df['count'] == df.count\n",
