--- a/bike_sharing_demand_prediction_pandas.ipynb
+++ b/bike_sharing_demand_prediction_pandas.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "Note that there are two types of data:\n",
     "1. Categorical: Nominal or ordinal. To use this type of data, we need to encode it (e.g. one-hot encoding) for developing machine learning models.\n",
-    "2. Quantitative: discrete or continuous."
+    "2. Quantitative: discrete or continuous.\n",
+    "\n",
+    "We use [Pandas](https://pandas.pydata.org/) and [scikit-learn](https://scikit-learn.org/stable/) in this implementation for bike sharing demand prediction."
    ]
   },
   {
